# smartfile-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  Terminal Saved Output.txt  pyproject.toml
app/: main.py
app/api/: router.py
app/api/routes/: files.py  health.py
app/core/: config.py  exceptions.py  logging.py
app/schemas/: file.py
app/services/: file_inspector.py  file_storage.py  header_detector.py
docs/: architecture.md
samples/input/: sample_ar.csv
tests/: conftest.py  test_files.py  test_header_detector.py  test_health.py
